# luieditor

./: .gitignore  CMakeLists.txt  imgui.ini  make.ps1
external_libs/ImFileDialog/: ImFileDialog.cpp
external_libs/freetype/: ftoption.h  subprojects_freetype-2.13.0_src_base_ftver.rc_ftver.res
external_libs/harfbuzz-win64/include/: harfbuzz-subset.cc
external_libs/imgui/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  imgui.vcxproj  imgui.vcxproj.filters
external_libs/imgui/imgui.dir/Debug/: imgui.lib.recipe
external_libs/imgui/imgui.dir/Debug/imgui.tlog/: CL.10544.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  imgui.lastbuildstate
external_libs/tracy/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Tracy.sln  TracyClient.vcxproj  TracyClient.vcxproj.filters  cmake_install.cmake
lib/: freetype.lib  harfbuzz.lib
src/: CMakeLists.txt  defines.h  main.cpp  main.h
src/application/: Application.cpp  Application.h  CMakeLists.txt
src/engine/: CMakeLists.txt  camera_system.cpp  camera_system.h  debug_render.cpp  debug_render.h  engine_math.cpp  engine_math.h  engine_memory.cpp  engine_memory.h  files.cpp  files.h  font_renderer.cpp  font_renderer.h  imgui_custom.cpp  imgui_custom.h  input_buttons.h  input_system.cpp  input_system.h  logging.h  ray_cast.cpp  ray_cast.h  renderer.cpp  renderer.h  renderer_types.h  scene.cpp  scene.h  texture.cpp  texture.h  timer.cpp  timer.h  win32_lib.cpp
